商品詳細表示機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
       <% if @items.present? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to "#" do %>
+            <%= link_to item_path(item.id) do %>
               <div class='item-img-content'>
                 <%= image_tag item.image, class: "item-img" %>
 
@@ -147,7 +147,7 @@
                   <%= item.item_name %>
                 </h3>
                 <div class='item-price'>
-                  <span><%= item.price %>円<br><%= item.charge_load.name %></span>
+                  <span><%= number_with_delimiter(item.price, delimiter: ",") %>円<br><%= item.charge_load.name %></span>
                   <div class='star-btn'>
                     <%= image_tag "star.png", class:"star-icon" %>
                     <span class='star-count'>0</span>
