--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,11 +135,11 @@
               <div class='item-img-content'>
                 <%= image_tag item.image, class: "item-img" %>
 
-                <%# 商品が売れていればsold outを表示しましょう(商品購入機能導入後に実装) %>
-                <%# <div class='sold-out'> %>
-                  <%# <span>Sold Out!!</span> %>
-                <%# </div> %>
-                <%# //商品が売れていればsold outを表示しましょう(商品購入機能導入後に実装) %>
+                <% if item.sold_out? %>
+                  <div class='sold-out'>
+                    <span>Sold Out!!</span>
+                  </div>
+                <% end %>
 
               </div>
               <div class='item-info'>
